CSS: fix edit/create buttons alignment

--- a/sylva/base/static/css/base.css
+++ b/sylva/base/static/css/base.css
@@ -668,6 +668,12 @@ span.buttonLinkOption {
     display: inline-block;
     margin-top: 2px;
     margin-left: 2px;
+    float: left;
+}
+
+span.buttonLinkRight {
+    padding-top: 6px;
+    padding-left: 4px;
 }
 
 span.buttonLinkOption a {
